<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task_scene_graph</name>
  <version>0.1.0</version>
  <description>
    Task-Driven Semantic Scene Graph with Dynamic Object Detection.
    Inspired by Clio (task-driven IB compression), Dynablox (free-space
    violation detection), and Khronos (spatio-temporal scene graphs).
  </description>
  <maintainer email="you@example.com">PhD Researcher</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>